# knukem

./: .gitignore  .gitignore.orig  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  Makefile  Makefile.orig  README.MD  STBAR.lmp  a.out  arch  archive  d-k3d  dash  doom-nukem  files  hash_code.c  map-clear.txt  map-clear1.txt  map-clear2.txt  map-clear77.txt  map_1  map_1!  map_2  map_cur  map_t  new_map.txt  out_file  out_file.map  out_pack  portrend.c  sources  test.c  usage.txt
CMAKE/: FindSDL2.cmake  FindSDL2Mixer.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
SDL/sdl2/2.0.12_1/: INSTALL_RECEIPT.json
SDL/sdl2/2.0.12_1/lib/: libSDL2.dylib
SDL/sdl2/2.0.12_1/lib/cmake/SDL2/: sdl2-config.cmake
SDL/sdl2/2.0.12_1/lib/pkgconfig/: sdl2.pc
SDL/sdl2_image/2.0.5/: INSTALL_RECEIPT.json
SDL/sdl2_image/2.0.5/lib/: libSDL2_image.dylib
SDL/sdl2_image/2.0.5/lib/pkgconfig/: SDL2_image.pc
SDL/sdl2_mixer/2.0.4/: INSTALL_RECEIPT.json
SDL/sdl2_mixer/2.0.4/.brew/: sdl2_mixer.rb
SDL/sdl2_mixer/2.0.4/lib/: libSDL2_mixer.dylib
SDL/sdl2_mixer/2.0.4/lib/pkgconfig/: SDL2_mixer.pc
SDL/sdl2_ttf/2.0.15/: INSTALL_RECEIPT.json
SDL/sdl2_ttf/2.0.15/lib/: libSDL2_ttf.dylib
SDL/sdl2_ttf/2.0.15/lib/pkgconfig/: SDL2_ttf.pc
SLADE.app/Contents/: Info.plist  PkgInfo
SLADE.app/Contents/MacOS/: slade.pk3
SLADE.app/Contents/_CodeSignature/: CodeResources
a.out.dSYM/Contents/Resources/DWARF/: a.out
cur/: files
frameworks/SDL2_mixer.framework/Versions/A/Frameworks/mpg123.framework/Versions/A/Resources/: LICENSE.mpg123.txt
hop/textur/: run.sh
hz/: files
includes/: archiver.h  archiver.h.orig  arg_defines.h  editor.h  engine.h  engine.h.orig  events.h  math_utilits.h  parse_wad.h  utilits.h
libft/: Makefile  author  c_add.c  c_arg.c  c_mod.c  c_pow.c  c_set.c  c_sub.c  ft_arrlen.c  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_expand_str.c  ft_free_split.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+36 more)
libft_/: c_sqr.c  ft_atoi.c  ft_lstdel.c  ft_lstnew.c  ft_putchar.c  ft_putendl.c  ft_realloc.c  ft_strcat.c  ft_strdel.c  ft_strequ.c  ft_strjoin.c  ft_strncat.c  ft_strnew.c  ft_strnlen.c  ft_strrev.c  ft_strstr.c  ft_strtrim.c  ft_strzero.c  ft_toupper.c  libft.h.gch
proba/: files
src/: .DS_Store.orig  archiver.c  cut_wall.c  dash_board.c  dash_board_fill_hud.c  dash_board_sub.c  door_animations.c  draw.c  fill_queue.c  game_loop.c  hud.c  hud_sub.c  init.c  init_engine.c  keys_manager.c  lighting.c  main.c  manage_data.c  manage_data.c.orig  move.c  new_map.c  new_map_sector.c  pack.c  run_queue.c  scaled.c  start_game.c  transform_wall.c  transform_wall.c.orig
src/animations/: check_door_anim.c  do_door_anim.c  start_door_anim.c
src/archiver/: archiver.c  pack.c  unpack.c
src/dash_board.dSYM/Contents/: Info.plist
src/dash_board.dSYM/Contents/Resources/DWARF/: dash_board
src/editor/: delete_one_graf.c  door_mod.c  graf_mod.c  real_time_edit.c  tx_mod.c
src/key_events/: event_edit.c  event_movement.c  keyboard_event.c  keys_manager.c
src/loader/: load_sector.c  manage_data.c
src/map_editor/: .draw_all.c.swp  .gitignore  draw.c  draw_all.c  draw_map.c  draw_sprites.c  draw_ui.c  draw_utils.c  draw_utils2.c  drawing_utils.c  errors.c  events.c  events_all.c  events_map.c  init.c  main.c  map_events.c  math.c  neighbors.c  obj_detection.c  pixels.c  prewrite.c  reader.c  sector_add.c  sector_check.c  sector_neighbors.c  sector_remove.c  sectors.c  sprites.c  texture.c  texture2.c  write.c
src/map_editor/draw/: digits.c  draw_all.c  draw_map.c  draw_map_obj.c  draw_ui.c  drawing_utils.c
src/map_editor/events/: events_all.c  events_key.c  events_map.c  events_processing.c
src/map_editor/sector/: sector_add.c  sector_check.c  sector_check_2.c  sector_neighbors.c  sector_remove.c
src/map_editor/write/: normalize.c  prewrite.c  write.c  write_sectors.c
src/math_utilits/: determine_intersection.c  intersection_point.c  mathf.c  perspective_transform.c  rotate_wall.c  rotates.c  vector_operations.c  wall_transform.c
src/movement/: fall.c  move.c
src/moving/: fall.c  move.c
src/render/: ceil_and_floor_init.c  ceil_and_floor_init.c.orig  graf_proccesing.c  minimap.c  render_ceil.c  render_cross.c  render_floor.c  render_graf.c  render_hplane.c  render_scene.c  render_scene.c.orig  render_sky.c  render_wall.c  rotate.c  sprite_render.c  transform_sprite.c
src/render/line/: render_hline.c  render_line.c  render_line_with_angle.c  render_vline.c
src/render/sprites/: draw_sprites.c
src/render/wall/: edge_tx_init.c  perspective_init.c  render_surfaces.c  render_wall.c  render_wall.c.orig  wall_tx_init.c
src/utilits/: anim_delete.c  exit_options.c  ispointincube.c  load_img.c  swap.c  utilits.c
src/utilits/math/: determine_intersection.c  intersection_point.c  mathf.c  mathf2.c  perspective_transform.c  rotates.c
src/utilits/math_utilits/: determine_intersection.c  perspective_transform.c  rotates.c
test/: ttt.sh
textur/: files  ssss
textur!/: files  out_file
textures/: files  files.map  map-clear.txt  map.txt  nmap.txt
textures copy 2/: files  map.txt  nmap.txt
textures/textures/: map.txt
ttt/: a.out  main.c  main.cpp  nod  test  test.c  test.s  varg.c
ttt/a.out.dSYM/Contents/Resources/DWARF/: a.out
